--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-scikit-learn==1.4.1.post1
-pandas==1.3.3
-numpy==1.21.2
-category-encoders==2.2.2
+category-encoders==2.6.3
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.4.2
+streamlit==1.33.0
